--- a/maths_analysis_method_of_lagrange_multipliers_fr.ipynb
+++ b/maths_analysis_method_of_lagrange_multipliers_fr.ipynb
@@ -2,9 +2,26 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "draft",
+     "meta"
+    ]
+   },
    "source": [
     "# La méthode des multiplicateurs de Lagrange"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
+   "source": [
+    "**TODO**:\n",
+    "* https://www.google.fr/webhp?ie=utf-8&oe=utf-8&client=firefox-b&gfe_rd=cr&ei=kutIWYeiKoXS8Afc25yQBQ#safe=active&q=m%C3%A9thode+des+multiplicateurs+de+lagrange"
    ]
   },
   {
@@ -73,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### On cherche à résoudre le problème d'optimisation suivant:\n",
+    "On cherche à résoudre le problème d'optimisation suivant:\n",
     "\n",
     "$$\n",
     "\\begin{align}\n",
@@ -185,33 +202,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "tags": [
+     "hide"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Check results\n",
     "\n",
-    "def deriv_partielle_x(x, _lambda):\n",
-    "    return 2. * (-0.5 + _lambda) * x + 2. * _lambda\n",
+    "#def deriv_partielle_x(x, _lambda):\n",
+    "#    return 2. * (-0.5 + _lambda) * x + 2. * _lambda\n",
     "\n",
-    "def deriv_partielle_lambda(x, _lambda):\n",
-    "    return x**2. + 2. * x - 10.\n",
+    "#def deriv_partielle_lambda(x, _lambda):\n",
+    "#    return x**2. + 2. * x - 10.\n",
     "\n",
-    "print((math.sqrt(11.) + 1.)/(2. * math.sqrt(11)))\n",
-    "print((math.sqrt(11.) - 1.)/(2. * math.sqrt(11)))\n",
-    "print(g_roots, lambda_roots)\n",
+    "#print((math.sqrt(11.) + 1.)/(2. * math.sqrt(11)))\n",
+    "#print((math.sqrt(11.) - 1.)/(2. * math.sqrt(11)))\n",
     "\n",
-    "print(deriv_partielle_x(g_roots[0], lambda_roots[0]))      # ERR  TODO\n",
-    "print(deriv_partielle_lambda(g_roots[0], lambda_roots[0])) # OK\n",
+    "#print(-math.sqrt(11.) -1.)\n",
+    "#print(math.sqrt(11.) - 1.)\n",
     "\n",
-    "print(deriv_partielle_x(g_roots[1], lambda_roots[1]))      # ERR  TODO\n",
-    "print(deriv_partielle_lambda(g_roots[1], lambda_roots[1])) # OK\n",
+    "#print(g_roots, lambda_roots)\n",
+    "\n",
+    "#print(deriv_partielle_x(g_roots[0], lambda_roots[0]))      # ERR  TODO\n",
+    "#print(deriv_partielle_lambda(g_roots[0], lambda_roots[0])) # OK\n",
+    "\n",
+    "#print(deriv_partielle_x(g_roots[1], lambda_roots[1]))      # ERR  TODO\n",
+    "#print(deriv_partielle_lambda(g_roots[1], lambda_roots[1])) # OK\n",
     "\n",
     "# TODO: REVOIR LES CALCULS POUR DERIV_LAMBDA ET LAMBDA_ROOTS, LES RESULTATS NE VERIFIENT PAS LE SYSTEME..."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
    "source": [
     "TODO\n",
     "\n",
@@ -227,57 +257,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "tags": [
+     "hide"
+    ]
    },
-   "outputs": [],
-   "source": [
-    "# HIDE\n",
-    "# THIS IS A FORMER EXAMPLE, IGNORE IT...\n",
-    "\n",
-    "#%matplotlib notebook\n",
-    "#%matplotlib inline\n",
-    "\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "def f(x):\n",
-    "    offset = 1.\n",
-    "    sigma = 0.5\n",
-    "    ampl = 10.\n",
-    "    \n",
-    "    return 1. / np.sqrt(2. * np.pi) * np.exp(-((x * sigma - offset)**2.)/2.) * ampl\n",
-    "    \n",
-    "def g(x):\n",
-    "    #freq = 0.055 * 2. * np.pi\n",
-    "    #return np.cos(freq * x)\n",
-    "    return np.cos(x)\n",
-    "\n",
-    "g_roots = [math.pi/2., 3. * math.pi/2.]\n",
-    "\n",
-    "x_min = -10.\n",
-    "x_max = 10.\n",
-    "\n",
-    "lambda_min = -2. * 2. * np.pi\n",
-    "lambda_max = 2. * 2. * np.pi\n",
-    "\n",
-    "#import scipy\n",
-    "#import scipy.optimize\n",
-    "\n",
-    "#g_roots = [scipy.optimize.brentq(g, -10, 0), scipy.optimize.brentq(g, 10, 0)]      # TODO\n",
-    "\n",
-    "# Find g roots\n",
-    "#scipy.optimize.fixed_point\n",
-    "#scipy.optimize.brentq\n",
-    "#scipy.optimize.brenth\n",
-    "#scipy.optimize.ridder\n",
-    "#scipy.optimize.bisect\n",
-    "#scipy.optimize.newton"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "#%matplotlib notebook\n",
@@ -329,12 +313,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "collapsed": true,
+    "scrolled": false,
+    "tags": [
+     "hide_code"
+    ]
    },
    "outputs": [],
    "source": [
-    "# HIDE CODE\n",
-    "\n",
     "# Build datas ###############\n",
     "\n",
     "x = np.linspace(x_min, x_max, 200)\n",
@@ -382,12 +368,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "collapsed": true,
+    "scrolled": false,
+    "tags": [
+     "hide_code"
+    ]
    },
    "outputs": [],
    "source": [
-    "# HIDE CODE\n",
-    "\n",
     "from mpl_toolkits.mplot3d import axes3d\n",
     "from matplotlib import cm\n",
     "#from matplotlib.colors import LightSource\n",
@@ -474,45 +462,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Build datas ###############\n",
-    "\n",
-    "x = np.linspace(-2. * 2. * np.pi, 2. * 2. * np.pi, 200)\n",
-    "fx = f(x)\n",
-    "gx = g(x)\n",
-    "\n",
-    "lambda_ = 1.\n",
-    "lx = fx + lambda_ * gx\n",
-    "\n",
-    "# Plot data #################\n",
-    "\n",
-    "fig = plt.figure(figsize=(8.0, 8.0))\n",
-    "ax = fig.add_subplot(111)\n",
-    "\n",
-    "ax.plot(x, fx, \":\", label=r\"$f(x)$\")\n",
-    "ax.plot(x, gx, \":\", label=r\"$g(x)$\")\n",
-    "ax.plot(x, lx, \"-\", label=r\"$\\mathcal{L}(x)$\")\n",
-    "\n",
-    "# Set title and labels ######\n",
-    "\n",
-    "ax.set_title(r\"Test\", fontsize=20)\n",
-    "ax.set_xlabel(r\"$x$\", fontsize=32)\n",
-    "ax.set_ylabel(r\"$f(x)$\", fontsize=32)\n",
-    "\n",
-    "# Set legend ################\n",
-    "\n",
-    "ax.legend(loc='upper right', fontsize=20)\n",
-    "\n",
-    "# Plot ######################\n",
-    "\n",
-    "plt.show()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -521,7 +470,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
    "source": [
     "**TODO**: reécrire cette partie"
    ]
@@ -655,11 +608,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "tags": [
+     "hide_code"
+    ]
+   },
    "outputs": [],
    "source": [
-    "%matplotlib notebook\n",
-    "#%matplotlib inline\n",
+    "#%matplotlib notebook\n",
+    "%matplotlib inline\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -736,14 +694,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
    "source": [
     "## Cas générale"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
    "source": [
     "**TODO**"
    ]
@@ -782,18 +748,10 @@
     "- http://nlp.cs.berkeley.edu/tutorials/lagrange-multipliers.pdf\n",
     "- http://res-nlp.univ-lemans.fr/NLP_C_M03_G03/co/Contenu_601.html (vu sous l'angle de la pyhsique)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**TODO**: hide this cell\n",
-    "\n",
-    "https://www.google.fr/webhp?ie=utf-8&oe=utf-8&client=firefox-b&gfe_rd=cr&ei=kutIWYeiKoXS8Afc25yQBQ#safe=active&q=m%C3%A9thode+des+multiplicateurs+de+lagrange"
-   ]
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python [default]",
    "language": "python",
