Improve some notebooks.

--- a/maths_mandelbrot_set_en.ipynb
+++ b/maths_mandelbrot_set_en.ipynb
@@ -51,7 +51,7 @@
     "in other words, the sequence tends to infinity for the numbers $c$ which do not belong to the Mandelbrot set\n",
     "(i.e. $\\lim_{i \\to +\\infty}{|z_i|} = +\\infty$ where $|z_i|$ is the modulus of $z_i$).\n",
     "\n",
-    "Here we will make a graphical representation of the Mandelbrot set (pixels are colored according to how rapidly the sequence diverges, the sooner the sequence diverges, the clearer the point).\n",
+    "Here we will make a graphical representation of the Mandelbrot set.\n",
     "\n",
     "Reference: *Toutes les mathématiques et les bases de l'informatique*, H. Stöcker, Dunod, p.696"
    ]
@@ -76,7 +76,7 @@
     "NUM_IT_MAX = 32\n",
     "Z_INIT = complex(0, 0)\n",
     "\n",
-    "def mandelbrot(x, y):\n",
+    "def mandelbrot_version1(x, y):\n",
     "    it = 0\n",
     "    z = Z_INIT\n",
     "    c = complex(x, y)\n",
@@ -86,26 +86,19 @@
     "        z = z**2 + c\n",
     "        it += 1\n",
     "\n",
-    "    # To print all levels\n",
-    "    return it\n",
+    "    return 1 if it == NUM_IT_MAX else 0\n",
     "\n",
-    "    ## To print only the level #N\n",
-    "    #if it < N:\n",
-    "    #    return 1\n",
-    "    #else:\n",
-    "    #    return 0\n",
-    "\n",
-    "REAL_RANGE = np.arange(-2.0, 1.0, 0.005).tolist()\n",
-    "IMAG_RANGE = np.arange(-1.2, 1.2, 0.005).tolist()\n",
+    "REAL_RANGE = np.linspace(-2.0, 1.0, 800).tolist()\n",
+    "IMAG_RANGE = np.linspace(-1.2, 1.2, 800).tolist()\n",
     "\n",
     "# Compute datas #############\n",
     "xgrid, ygrid = np.meshgrid(REAL_RANGE, IMAG_RANGE)\n",
-    "data = np.array([mandelbrot(x, y) for y in IMAG_RANGE for x in REAL_RANGE]).reshape(len(IMAG_RANGE), len(REAL_RANGE))\n",
+    "data = np.array([mandelbrot_version1(x, y) for y in IMAG_RANGE for x in REAL_RANGE]).reshape(len(IMAG_RANGE), len(REAL_RANGE))\n",
     "\n",
     "# Plot data #################\n",
     "# (nice color maps: summer, magma, gist_gray, gist_yarg, gist_heat, Blues, coolwarm, copper)\n",
     "fig, ax = plt.subplots()\n",
-    "ax.imshow(data, extent=[xgrid.min(), xgrid.max(), ygrid.min(), ygrid.max()], interpolation=\"bicubic\", cmap=cm.Blues)\n",
+    "ax.imshow(data, extent=[xgrid.min(), xgrid.max(), ygrid.min(), ygrid.max()], interpolation=\"none\", cmap=cm.gray_r)\n",
     "\n",
     "ax.set_axis_off()\n",
     "\n",
@@ -154,7 +147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then lets define the Mandelbrot set."
+    "Then lets define the Mandelbrot set:"
    ]
   },
   {
@@ -169,7 +162,19 @@
     "NUM_IT_MAX = 32\n",
     "Z_INIT = complex(0, 0)\n",
     "\n",
-    "def mandelbrot(x, y):\n",
+    "def mandelbrot_version1(x, y):\n",
+    "    it = 0\n",
+    "    z = Z_INIT\n",
+    "    c = complex(x, y)\n",
+    "\n",
+    "    # Rem: abs(z) = |z| = math.sqrt(pow(z.imag,2) + pow(z.real,2))\n",
+    "    while it < NUM_IT_MAX and abs(z) <= EPSILON_MAX:\n",
+    "        z = z**2 + c\n",
+    "        it += 1\n",
+    "\n",
+    "    return 1 if it == NUM_IT_MAX else 0\n",
+    "\n",
+    "def mandelbrot_version2(x, y):\n",
     "    it = 0\n",
     "    z = Z_INIT\n",
     "    c = complex(x, y)\n",
@@ -186,7 +191,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, lets display the Mandelbrot set in the complex plane."
+    "`mandelbrot_version1` defines the Mandelbrot set whereas `mandelbrot_version2` is an alternative version that shows how fast the sequence diverges for a number $c = x + iy$.\n",
+    "\n",
+    "Finally, lets display the Mandelbrot set in the complex plane (pixels are colored according to how rapidly the sequence diverges, the sooner the sequence diverges, the clearer the point)."
    ]
   },
   {
@@ -195,12 +202,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "REAL_RANGE = np.arange(-2.0, 1.0, 0.005).tolist()\n",
-    "IMAG_RANGE = np.arange(-1.2, 1.2, 0.005).tolist()\n",
+    "REAL_RANGE = np.linspace(-2.0, 1.0, 800).tolist()\n",
+    "IMAG_RANGE = np.linspace(-1.2, 1.2, 800).tolist()\n",
     "\n",
     "# Compute datas #############\n",
     "xgrid, ygrid = np.meshgrid(REAL_RANGE, IMAG_RANGE)\n",
-    "data = np.array([mandelbrot(x, y) for y in IMAG_RANGE for x in REAL_RANGE]).reshape(len(IMAG_RANGE), len(REAL_RANGE))\n",
+    "data = np.array([mandelbrot_version2(x, y) for y in IMAG_RANGE for x in REAL_RANGE]).reshape(len(IMAG_RANGE), len(REAL_RANGE))\n",
     "\n",
     "# Plot data #################\n",
     "fig, ax = plt.subplots()\n",
@@ -232,7 +239,7 @@
     "\n",
     "# Compute datas #############\n",
     "xgrid, ygrid = np.meshgrid(REAL_RANGE, IMAG_RANGE)\n",
-    "data = np.array([mandelbrot(x, y) for y in IMAG_RANGE for x in REAL_RANGE]).reshape(len(IMAG_RANGE), len(REAL_RANGE))\n",
+    "data = np.array([mandelbrot_version2(x, y) for y in IMAG_RANGE for x in REAL_RANGE]).reshape(len(IMAG_RANGE), len(REAL_RANGE))\n",
     "\n",
     "# Plot data #################\n",
     "fig = plt.figure()\n",
