--- a/maths_mandelbrot_set_fr.ipynb
+++ b/maths_mandelbrot_set_fr.ipynb
@@ -65,7 +65,7 @@
     "L'ensemble de Mandelbrot est l'ensemble de tous les nombres $c$ pour lesquels cette suite converge ;\n",
     "la suite tend vers l'infini pour les nombres $c$ n'appartenant pas à l'ensemble de Mandelbrot (i.e. $\\lim_{i \\to +\\infty}{|z_i|} = +\\infty$ où $|z_i|$ est le module de $z_i$).\n",
     "\n",
-    "Ci-dessous, l'ensemble de Mandelbrot est représenté graphiquement dans le plan complexe (plus la suite diverge vite plus le point est claire).\n",
+    "Ci-dessous, l'ensemble de Mandelbrot est représenté graphiquement dans le plan complexe.\n",
     "\n",
     "Référence: *Toutes les mathématiques et les bases de l'informatique*, H. Stöcker, Dunod, p.696"
    ]
@@ -87,39 +87,32 @@
     "from matplotlib import cm\n",
     "\n",
     "EPSILON_MAX = 2.\n",
-    "NUM_IT_MAX = 32\n",
+    "NUM_IT_MAX = 64\n",
     "Z_INIT = complex(0, 0)\n",
     "\n",
-    "def mandelbrot(x, y):\n",
+    "def mandelbrot_version1(x, y):\n",
     "    it = 0\n",
     "    z = Z_INIT\n",
     "    c = complex(x, y)\n",
     "\n",
-    "    # Remarque: abs(z) = |z| = math.sqrt(pow(z.imag,2) + pow(z.real,2))\n",
+    "    # Rem: abs(z) = |z| = math.sqrt(pow(z.imag,2) + pow(z.real,2))\n",
     "    while it < NUM_IT_MAX and abs(z) <= EPSILON_MAX:\n",
     "        z = z**2 + c\n",
     "        it += 1\n",
     "\n",
-    "    # Pour afficher tous les niveaux d'itération\n",
-    "    return it\n",
+    "    return 1 if it == NUM_IT_MAX else 0\n",
     "\n",
-    "    ## Pour afficher uniquement l'ensemble défini au niveau d'itération N\n",
-    "    #if it < N:\n",
-    "    #    return 1\n",
-    "    #else:\n",
-    "    #    return 0\n",
-    "\n",
-    "REAL_RANGE = np.arange(-2.0, 1.0, 0.005).tolist()\n",
-    "IMAG_RANGE = np.arange(-1.2, 1.2, 0.005).tolist()\n",
+    "REAL_RANGE = np.linspace(-2.0, 1.0, 800).tolist()\n",
+    "IMAG_RANGE = np.linspace(-1.2, 1.2, 800).tolist()\n",
     "\n",
     "# Définie un ensemble de points c et vérifie leur appartenance à l'ensemble de Mandelbrot\n",
     "xgrid, ygrid = np.meshgrid(REAL_RANGE, IMAG_RANGE)\n",
-    "data = np.array([mandelbrot(x, y) for y in IMAG_RANGE for x in REAL_RANGE]).reshape(len(IMAG_RANGE), len(REAL_RANGE))\n",
+    "data = np.array([mandelbrot_version1(x, y) for y in IMAG_RANGE for x in REAL_RANGE]).reshape(len(IMAG_RANGE), len(REAL_RANGE))\n",
     "\n",
     "# Génère l'image\n",
     "# (cmap alternatifs: summer, magma, gist_gray, gist_yarg, gist_heat, Blues, coolwarm, copper)\n",
     "fig, ax = plt.subplots()\n",
-    "ax.imshow(data, extent=[xgrid.min(), xgrid.max(), ygrid.min(), ygrid.max()], interpolation=\"bicubic\", cmap=cm.Blues)\n",
+    "ax.imshow(data, extent=[xgrid.min(), xgrid.max(), ygrid.min(), ygrid.max()], interpolation=\"none\", cmap=cm.gray_r)\n",
     "\n",
     "ax.set_axis_off()\n",
     "\n",
@@ -183,12 +176,24 @@
     "NUM_IT_MAX = 32\n",
     "Z_INIT = complex(0, 0)\n",
     "\n",
-    "def mandelbrot(x, y):\n",
+    "def mandelbrot_version1(x, y):\n",
     "    it = 0\n",
     "    z = Z_INIT\n",
     "    c = complex(x, y)\n",
     "\n",
-    "    # Remarque: abs(z) = |z| = math.sqrt(pow(z.imag,2) + pow(z.real,2))\n",
+    "    # Rem: abs(z) = |z| = math.sqrt(pow(z.imag,2) + pow(z.real,2))\n",
+    "    while it < NUM_IT_MAX and abs(z) <= EPSILON_MAX:\n",
+    "        z = z**2 + c\n",
+    "        it += 1\n",
+    "\n",
+    "    return 1 if it == NUM_IT_MAX else 0\n",
+    "\n",
+    "def mandelbrot_version2(x, y):\n",
+    "    it = 0\n",
+    "    z = Z_INIT\n",
+    "    c = complex(x, y)\n",
+    "\n",
+    "    # Rem: abs(z) = |z| = math.sqrt(pow(z.imag,2) + pow(z.real,2))\n",
     "    while it < NUM_IT_MAX and abs(z) <= EPSILON_MAX:\n",
     "        z = z**2 + c\n",
     "        it += 1\n",
@@ -200,7 +205,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nous pouvons alors représenter graphiquement l'ensemble de Mandelbrot dans le plan complexe :"
+    "`mandelbrot_version1` définie l'ensemble de Mandelbrot ; `mandelbrot_version2` est une fonction alternative qui permet de voir à quelle vitesse la suite diverge (la fonction retroune une valeur d'autant plus petite que le nombre complexe $c = x + yi$ fait diverger la suite rapidement).\n",
+    "\n",
+    "Nous pouvons maintenant représenter graphiquement l'ensemble de Mandelbrot dans le plan complexe (plus la suite diverge vite plus le point image du nombre complexe c=x+yic=x+yi est claire) :"
    ]
   },
   {
@@ -211,12 +218,12 @@
    },
    "outputs": [],
    "source": [
-    "REAL_RANGE = np.arange(-2.0, 1.0, 0.005).tolist()\n",
-    "IMAG_RANGE = np.arange(-1.2, 1.2, 0.005).tolist()\n",
+    "REAL_RANGE = np.linspace(-2.0, 1.0, 800).tolist()\n",
+    "IMAG_RANGE = np.linspace(-1.2, 1.2, 800).tolist()\n",
     "\n",
     "# Définie un ensemble de points c et vérifie leur appartenance à l'ensemble de Mandelbrot\n",
     "xgrid, ygrid = np.meshgrid(REAL_RANGE, IMAG_RANGE)\n",
-    "data = np.array([mandelbrot(x, y) for y in IMAG_RANGE for x in REAL_RANGE]).reshape(len(IMAG_RANGE), len(REAL_RANGE))\n",
+    "data = np.array([mandelbrot_version2(x, y) for y in IMAG_RANGE for x in REAL_RANGE]).reshape(len(IMAG_RANGE), len(REAL_RANGE))\n",
     "\n",
     "# Génère l'image\n",
     "fig, ax = plt.subplots()\n",
@@ -250,7 +257,7 @@
     "\n",
     "# Définie un ensemble de points c et vérifie leur appartenance à l'ensemble de Mandelbrot\n",
     "xgrid, ygrid = np.meshgrid(REAL_RANGE, IMAG_RANGE)\n",
-    "data = np.array([mandelbrot(x, y) for y in IMAG_RANGE for x in REAL_RANGE]).reshape(len(IMAG_RANGE), len(REAL_RANGE))\n",
+    "data = np.array([mandelbrot_version2(x, y) for y in IMAG_RANGE for x in REAL_RANGE]).reshape(len(IMAG_RANGE), len(REAL_RANGE))\n",
     "\n",
     "# Génère la figure\n",
     "fig = plt.figure()\n",
