--- a/maths_mandelbrot_set_fr.ipynb
+++ b/maths_mandelbrot_set_fr.ipynb
@@ -207,7 +207,7 @@
    "source": [
     "`mandelbrot_version1` définie l'ensemble de Mandelbrot ; `mandelbrot_version2` est une fonction alternative qui permet de voir à quelle vitesse la suite diverge (la fonction retroune une valeur d'autant plus petite que le nombre complexe $c = x + yi$ fait diverger la suite rapidement).\n",
     "\n",
-    "Nous pouvons maintenant représenter graphiquement l'ensemble de Mandelbrot dans le plan complexe (plus la suite diverge vite plus le point image du nombre complexe c=x+yic=x+yi est claire) :"
+    "Nous pouvons maintenant représenter graphiquement l'ensemble de Mandelbrot dans le plan complexe (plus la suite diverge vite plus le point image du nombre complexe $c=x+yi$ est claire) :"
    ]
   },
   {
