--- a/ai_id3_fr.ipynb
+++ b/ai_id3_fr.ipynb
@@ -1,22 +1,41 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "tags": [
+     "meta",
+     "draft"
+    ]
    },
-   "outputs": [],
    "source": [
-    "import pandas as pd"
+    "# L'apprentissage d'arbres de décision avec ID3"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
    "source": [
     "**TODO**:\n",
     "- faire un document séparé pour ID3, CART, C4.5, etc. ou mettre tout dans ce notebook ???"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "tags": [
+     "hide"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
    ]
   },
   {
@@ -45,7 +64,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
    "source": [
     "**TODO**:\n",
     "- mettre un exemple: illustration générée à partir d'une bibliothèque dédiée\n",
@@ -83,7 +106,10 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
-    "scrolled": false
+    "scrolled": false,
+    "tags": [
+     "hide_code"
+    ]
    },
    "outputs": [],
    "source": [
@@ -124,7 +150,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
    "source": [
     "**TODO...**"
    ]
@@ -242,7 +272,10 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
-    "scrolled": false
+    "scrolled": false,
+    "tags": [
+     "hide_code"
+    ]
    },
    "outputs": [],
    "source": [
@@ -295,7 +328,10 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
-    "scrolled": false
+    "scrolled": false,
+    "tags": [
+     "hide_code"
+    ]
    },
    "outputs": [],
    "source": [
@@ -336,7 +372,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
    "source": [
     "**TODO**: traduire la base suivante en Français..."
    ]
@@ -346,7 +386,10 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
-    "scrolled": false
+    "scrolled": false,
+    "tags": [
+     "hide_code"
+    ]
    },
    "outputs": [],
    "source": [
@@ -384,6 +427,7 @@
  ],
  "metadata": {
   "anaconda-cloud": {},
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python [default]",
    "language": "python",
