--- a/ai_perceptron_fr.ipynb
+++ b/ai_perceptron_fr.ipynb
@@ -2,14 +2,23 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "meta",
+     "draft"
+    ]
+   },
    "source": [
     "# Perceptron"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
    "source": [
     "### TODO\n",
     "\n",
@@ -28,8 +37,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide_output"
+    ]
+   },
    "source": [
+    "Définition des macros LaTeX...\n",
+    "\n",
     "$$\n",
     "\\newcommand{\\activthres}{\\theta}\n",
     "\\newcommand{\\activfunc}{f}\n",
@@ -40,8 +55,13 @@
     "\\newcommand{\\sigout}{s_j}\n",
     "\\newcommand{\\sigoutdes}{d_j}\n",
     "\\newcommand{\\wij}{w_{ij}}\n",
-    "$$\n",
-    "\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Auteur: F. Rosenblatt\n",
     "\n",
     "Reference: F. Rosenblatt 1958 *The Perceptron: a Probabilistic Model for Information Storage and Organization in the Brain* Psychological Review, 65, 386-408\n",
@@ -82,7 +102,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "tags": [
+     "hide_code"
+    ]
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -104,7 +129,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "tags": [
+     "hide_code"
+    ]
+   },
    "outputs": [],
    "source": [
     "#x = np.linspace(-5, 5, 300)\n",
@@ -147,7 +177,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -166,7 +198,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "tags": [
+     "hide_code"
+    ]
+   },
    "outputs": [],
    "source": [
     "# https://github.com/jeremiedecock/neural-network-figures.git\n",
@@ -277,7 +314,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "example_list = tuple(reversed(tuple(itertools.product((0., 1.), repeat=4))))\n",
@@ -292,7 +331,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "weights = learn_examples(example_list, label_list, initial_weights, 5)\n",
@@ -302,7 +343,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for input_signal, output_signal, desired_output_signal, error, weights, iteration in zip(log.input_signal, log.output_signal, log.desired_output_signal, log.error, log.weights, log.iteration):\n",
@@ -312,23 +355,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "plt.plot(log.error)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "df = pd.DataFrame(np.array([log.iteration, log.error]).T, columns=[\"Iteration\", \"Error\"])\n",
-    "abs_err_per_it = abs(df).groupby([\"Iteration\"]).sum()\n",
-    "abs_err_per_it.plot(title=\"Sum of absolute errors per iteration\")"
    ]
   },
   {
@@ -338,11 +370,18 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame(np.array([log.iteration, log.error]).T, columns=[\"Iteration\", \"Error\"])\n",
+    "abs_err_per_it = abs(df).groupby([\"Iteration\"]).sum()\n",
+    "abs_err_per_it.plot(title=\"Sum of absolute errors per iteration\")"
+   ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python [default]",
    "language": "python",
