--- a/maths_euclidean_geometry_en.ipynb
+++ b/maths_euclidean_geometry_en.ipynb
@@ -2,24 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "meta",
+     "draft"
+    ]
+   },
    "source": [
     "# Euclidean geometry"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Import directives"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "tags": [
+     "hide"
+    ]
+   },
    "outputs": [],
    "source": [
+    "# Import directives\n",
+    "\n",
     "#%pylab notebook\n",
     "%pylab inline\n",
     "\n",
@@ -109,7 +114,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Define initial points\n",
@@ -241,7 +248,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Define initial points\n",
@@ -316,6 +325,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -380,7 +390,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "@interact(a=(-5., 5., 0.1), b=(-5., 5., 0.1), c=(-5., 5., 0.1))\n",
@@ -437,7 +449,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Setup the plot\n",
@@ -540,7 +554,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def angle_point_to_equation(angle_degree, p):\n",
@@ -702,6 +718,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -778,7 +795,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "@interact(theta_x=(-90., 90., 1.), theta_y=(-90., 90., 1.), theta_z=(-90., 90., 1.))\n",
@@ -855,53 +874,11 @@
     "    plot2d(b.T, \"ok\")\n",
     "    plot2d(b.T, \"-k\")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "## Sandbox"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Normal vector"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.axis('equal')\n",
-    "\n",
-    "plt.axis([-5, 5, -5, 5])\n",
-    "plt.xticks(np.arange(-5, 5, 1))\n",
-    "plt.yticks(np.arange(-5, 5, 1))\n",
-    "\n",
-    "plt.axhline(y=0, color='k')\n",
-    "plt.axvline(x=0, color='k')\n",
-    "\n",
-    "x = np.arange(-5, 5, 1)\n",
-    "\n",
-    "a, b = 0.5, 1.\n",
-    "y = a * x + b\n",
-    "\n",
-    "plt.plot(x, y, \"-r\")\n",
-    "\n",
-    "plt.plot([0, -a], [0, 1], \"-r\")\n",
-    "\n",
-    "plt.grid()"
-   ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python [default]",
    "language": "python",
