--- a/skeleton_fr.ipynb
+++ b/skeleton_fr.ipynb
@@ -23,6 +23,20 @@
     "**TODO**\n",
     "* ..."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "tags": [
+     "hide"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# import python packages here..."
+   ]
   }
  ],
  "metadata": {
