--- a/ai_multilayer_perceptron_fr.ipynb
+++ b/ai_multilayer_perceptron_fr.ipynb
@@ -2,9 +2,32 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "meta",
+     "draft"
+    ]
+   },
    "source": [
     "# Perceptron Multicouche"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "tags": [
+     "hide"
+    ]
+   },
+   "source": [
+    "**TODO**\n",
+    "\n",
+    "Shallow et Deep learning à lire:\n",
+    "- https://www.miximum.fr/blog/introduction-au-deep-learning-2/\n",
+    "- https://sciencetonnante.wordpress.com/2016/04/08/le-deep-learning/\n",
+    "- https://www.technologies-ebusiness.com/enjeux-et-tendances/le-deep-learning-pas-a-pas\n",
+    "- http://scholar.google.fr/scholar_url?url=https://arxiv.org/pdf/1404.7828&hl=fr&sa=X&scisig=AAGBfm07Y2UDlPpbninerh4gxHUj2SJfDQ&nossl=1&oi=scholarr&sqi=2&ved=0ahUKEwjfxMu7jKnUAhUoCsAKHR_RDlkQgAMIKygAMAA"
    ]
   },
   {
@@ -100,7 +123,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "tags": [
+     "hide"
+    ]
    },
    "outputs": [],
    "source": [
@@ -134,7 +160,10 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
-    "scrolled": false
+    "scrolled": false,
+    "tags": [
+     "hide_code"
+    ]
    },
    "outputs": [],
    "source": [
@@ -215,7 +244,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
    "source": [
     "TODO: quelle différence entre:\n",
     "* réseau bouclé\n",
@@ -262,7 +295,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "tags": [
+     "hide_code"
+    ]
    },
    "outputs": [],
    "source": [
@@ -380,7 +416,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "tags": [
+     "hide_code"
+    ]
    },
    "outputs": [],
    "source": [
@@ -410,7 +449,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
    "source": [
     "*Apprentissage incrémentiel* (ou *partiel*) (ang. *incremental learning*):\n",
     "on ajuste les poids $\\weights$ après la présentation d'un seul exemple\n",
@@ -426,7 +469,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
    "source": [
     "**TODO: règle du delta / règle du delta généralisée**"
    ]
@@ -509,7 +556,10 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
-    "scrolled": false
+    "scrolled": false,
+    "tags": [
+     "hide_code"
+    ]
    },
    "outputs": [],
    "source": [
@@ -558,7 +608,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "tags": [
+     "hide_code"
+    ]
    },
    "outputs": [],
    "source": [
@@ -1013,7 +1066,10 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
-    "scrolled": true
+    "scrolled": true,
+    "tags": [
+     "hide_code"
+    ]
    },
    "outputs": [],
    "source": [
@@ -1076,7 +1132,10 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
-    "scrolled": true
+    "scrolled": true,
+    "tags": [
+     "hide_code"
+    ]
    },
    "outputs": [],
    "source": [
@@ -1126,7 +1185,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "tags": [
+     "hide_code"
+    ]
    },
    "outputs": [],
    "source": [
@@ -1171,7 +1233,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "tags": [
+     "hide_code"
+    ]
    },
    "outputs": [],
    "source": [
@@ -1411,42 +1476,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
    "source": [
     "## Notes du livre de Jean-Philippe Rennard"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "## Shallow et Deep learning: à lire"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- https://www.miximum.fr/blog/introduction-au-deep-learning-2/\n",
-    "- https://sciencetonnante.wordpress.com/2016/04/08/le-deep-learning/\n",
-    "- https://www.technologies-ebusiness.com/enjeux-et-tendances/le-deep-learning-pas-a-pas\n",
-    "- http://scholar.google.fr/scholar_url?url=https://arxiv.org/pdf/1404.7828&hl=fr&sa=X&scisig=AAGBfm07Y2UDlPpbninerh4gxHUj2SJfDQ&nossl=1&oi=scholarr&sqi=2&ved=0ahUKEwjfxMu7jKnUAhUoCsAKHR_RDlkQgAMIKygAMAA"
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python [default]",
    "language": "python",
