--- a/signal_processing_wavelet_transform_fr.ipynb
+++ b/signal_processing_wavelet_transform_fr.ipynb
@@ -2,16 +2,25 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "meta",
+     "draft"
+    ]
+   },
    "source": [
-    "# Wavelet Transform"
+    "# Transformée en ondelettes"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
    "source": [
-    "TODO:\n",
+    "**TODO**:\n",
     "- ajouter notation simplifiée\n",
     "    - wavelet-transform-slides\n",
     "    - slides de Bologne\n",
@@ -22,7 +31,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "tags": [
+     "hide"
+    ]
    },
    "outputs": [],
    "source": [
@@ -33,20 +45,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Tool functions"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "tags": [
+     "hide"
+    ]
    },
    "outputs": [],
    "source": [
+    "# Tool functions\n",
+    "\n",
     "def read_fits_file(file_path):\n",
     "    hdu_list = fits.open(file_path) # Open the FITS file\n",
     "    data = hdu_list[0].data\n",
@@ -68,14 +78,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## \"À trous\" Wavelet Transform"
+    "## Transformée en ondelettes \"À trous\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### A python implementation"
+    "### Une implementation Python"
    ]
   },
   {
@@ -250,7 +260,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "file_path = \"/Users/jdecock/git/pub/jdhp/snippets/science/wavelet_transform/test.fits\"\n",
@@ -267,19 +279,11 @@
     "for scale_index, scale in enumerate(transformed_image):\n",
     "    plot(scale, \"Scale {}\".format(scale_index))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python [default]",
    "language": "python",
